[tool.poetry]
name = "openai-billing-analysis"
version = "0.1.2"
description = ""
authors = ["Abhinav Tushar <abhinav@skit.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gpt-cost-estimator = "0.5"
pydash = "^7.0.7"
docopt = "^0.6.2"
tabulate = "^0.9.0"

[tool.poetry.scripts]
openai_billing_analysis = "openai_billing_analysis.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
